--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,8 @@ svg:not(:root) {
   --font1: #ffffff;
   --bg: #202124;
   --font2: #bdc1c6;
-  --sm: 0.9rem;
+  --m: 0.9rem;
+  --sm: 0.875rem;
 }
 
 header {
@@ -46,7 +47,7 @@ header nav .nav-right-section li a {
 
 header nav .nav-right-section li:nth-child(1),
 header nav .nav-right-section li:nth-child(2) {
-  font-size: var(--sm);
+  font-size: var(--m);
   padding-right: 15px;
 }
 
@@ -82,4 +83,49 @@ header nav .nav-right-section li:nth-child(2):hover {
 .navbar-svg:hover {
   border-radius: 50%;
   background-color: #bdc1c618;
+}
+
+.main-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.input-search{
+  padding: 22px;
+  display: block;
+}
+
+.input-search input{
+  width: 584px;
+  height: 46px;
+  border-radius: 24px;
+  background-color: #202124;
+  border: 1px solid #5f6368;
+  margin: 0 auto;
+}
+
+.buttons{
+  display: block;
+  text-align: -webkit-center;
+  height: 70px;
+  padding-top: 28px;
+
+}
+
+.buttons button{
+  height: 36px;
+  padding: 0 16px;
+  border: 1px solid #303134;
+  background-color: #303134;
+  border-radius: 4px;
+  color: var(--font1);
+  font-size: var(--sm);
+  text-align: center;
+  margin: 0 4px;
+}
+
+.buttons button:hover{
+  cursor: pointer;
+  border: 1px solid grey;
 }
