--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ svg:not(:root) {
   --font2: #bdc1c6;
   --m: 0.9rem;
   --sm: 0.875rem;
+  --lg: 0.975rem;
 }
 
 header {
@@ -85,35 +86,39 @@ header nav .nav-right-section li:nth-child(2):hover {
   background-color: #bdc1c618;
 }
 
-.main-container{
+.main-container {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.input-search{
+.input-search {
   padding: 22px;
   display: block;
 }
 
-.input-search input{
+.input-search input {
   width: 584px;
   height: 46px;
   border-radius: 24px;
   background-color: #202124;
   border: 1px solid #5f6368;
   margin: 0 auto;
+  padding: 20px;
+  color: var(--font1);
+  font-size: var(--lg)
 }
 
-.buttons{
+
+
+.buttons {
   display: block;
   text-align: -webkit-center;
   height: 70px;
   padding-top: 28px;
-
 }
 
-.buttons button{
+.buttons button {
   height: 36px;
   padding: 0 16px;
   border: 1px solid #303134;
@@ -125,7 +130,42 @@ header nav .nav-right-section li:nth-child(2):hover {
   margin: 0 4px;
 }
 
-.buttons button:hover{
+.buttons button:hover {
   cursor: pointer;
   border: 1px solid grey;
+}
+
+footer {
+  width: 100%;
+  position: absolute;
+  bottom: 0px;
+  background-color: #171717;
+  font-size: var(--m);
+  color: var(--font2)
+}
+
+.country-footer{
+  padding: 15px 30px;
+  border-bottom: 1px solid #3c4043;
+}
+
+.footer-menu{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  list-style: none;
+  align-items: center;
+  padding: 0px 20px;
+}
+
+.footer-menu ul li{
+  display: inline;
+  padding: 10px;
+  cursor: pointer;
+}
+.footer-menu ul li:hover{
+  text-decoration: underline;
+}
+.footer-menu-left{
+  padding: 15px 0;
 }
